--- a/shedd-aquarium.html
+++ b/shedd-aquarium.html
@@ -112,72 +112,60 @@
 						<!-- Gallery -->
 							<div class="gallery style2 medium lightbox onscroll-fade-in">
 								<article>
-									<a href="images/gateway/gateway-heuristic-evaluation.png" data-caption="Conducted a heuristic evaluation on the existing gateway page." class="image">
-										<img src="images/gallery/thumbs/gateway-heuristic-thumb.jpg" alt="Heuristic evaluation" />
+									<a href="images/shedd-aquarium/tactile-otter.jpg" data-caption="Observing participant at the tactile otter exhibit." class="image">
+										<img src="images/gallery/thumbs/tactile-otter-thumb.jpg" alt="Image of a woman who is visually impared touching a tactile otter display" />
 									</a>
 									<div class="caption">
-										<h3>Heuristic Evaluation</h3>
-										<p>Conducted a heuristic evaluation on the existing gateway page.</p>
+										<h3>Contextual Inquiry</h3>
+										<p>Observing participant at the tactile otter exhibit.</p>
 										<ul class="actions">
 											<li><span class="button small">Enlarge</span></li>
 										</ul>
 									</div>
 								</article>
 								<article>
-									<a href="images/gateway/gateway-remote-user-testing.png" data-caption="Conducted remote user testing to find usability issues." class="image">
-										<img src="images/gallery/thumbs/gateway-remote-user-testing-thumb.jpg" alt="Remote user testing" />
+									<a href="images/shedd-aquarium/tactile-sea-turtle.jpg" data-caption="Observing participant at the tactile sea turtle exhibit." class="image">
+										<img src="images/gallery/thumbs/shedd-aquarium-sea-turtle-thumb.jpg" alt="Image of a woman who is visually impared touching a tactile sea turtle exhibit" />
 									</a>
 									<div class="caption">
-										<h3>Remote User Testing</h3>
-										<p>Conducted remote user testing to find usability issues.</p>
+										<h3>Contextual Inquiry</h3>
+										<p>Observing participant at the tactile sea turtle exhibit.</p>
 										<ul class="actions">
 											<li><span class="button small">Enlarge</span></li>
 										</ul>
 									</div>
 								</article>
 								<article>
-									<a href="images/gateway/gateway-mobile-breakpoint.png" data-caption="Screenshot of mobile breakpoint." class="image">
-										<img src="images/gallery/thumbs/gateway-mobile-thumb.jpg" alt="Test2" />
+									<a href="images/shedd-aquarium/tactile-reef.jpg" data-caption="Observing participant at the tactile reef exhibit." class="image">
+										<img src="images/gallery/thumbs/shedd-aquarium-reef-thumb.jpg" alt="Image of a man who is visually impared touching a tactile reef exhibit" />
 									</a>
 									<div class="caption">
-										<h3>Mobile Breakpoint</h3>
-										<p>Screenshot of mobile breakpoint.</p>
+										<h3>Contextual Inquiry</h3>
+										<p>Observing participant at the tactile reef exhibit.</p>
 										<ul class="actions">
 											<li><span class="button small">Enlarge</span></li>
 										</ul>
 									</div>
 								</article>
 								<article>
-									<a href="images/gateway/gateway-desktop.png" data-caption="Screenshot of deskotp breakpoint." class="image">
-										<img src="images/gallery/thumbs/gateway-desktop-thumb.jpg" alt="Test2" />
+									<a href="images/shedd-aquarium/tactile-sturgeon.jpg" data-caption="Observing participant at the touch pool." class="image">
+										<img src="images/gallery/thumbs/shedd-aquarium-sturgeon-thumb.jpg" alt="Image of a man who is visually impared interacting with the touch pool exhibit" />
 									</a>
 									<div class="caption">
-										<h3>Desktop Breakpoint</h3>
-										<p>Screenshot of deskotp breakpoint.</p>
+										<h3>Contextual Inquiry</h3>
+										<p>Observing participant at the touch pool.</p>
 										<ul class="actions">
 											<li><span class="button small">Enlarge</span></li>
 										</ul>
 									</div>
 								</article>
 								<article>
-									<a href="images/gateway/gateway-mobile.jpg" data-caption="Peapod gateway page on a mobile device." class="image">
-										<img src="images/gallery/thumbs/gateway-mobile-device-thumb.jpg" alt="Test2" />
+									<a href="images/shedd-aquarium/stormboard-affinity-diagram.jpg" data-caption="Using Stormboard to create an affinity diagram from our observations." class="image">
+										<img src="images/gallery/thumbs/shedd-aquarium-stormboard-thumb.jpg" alt="Image of an affinity diagram on Stormboard" />
 									</a>
 									<div class="caption">
-										<h3>Peapod Mobile</h3>
-										<p>Peapod gateway page on a mobile device.</p>
-										<ul class="actions">
-											<li><span class="button small">Enlarge</span></li>
-										</ul>
-									</div>
-								</article>
-								<article>
-									<a href="images/gateway/gateway-tablet.jpg" data-caption="Peapod gateway page on a tablet." class="image">
-										<img src="images/gallery/thumbs/gateway-tablet-thumb.jpg" alt="Test2" />
-									</a>
-									<div class="caption">
-										<h3>Peapod Tablet</h3>
-										<p>Peapod gateway page on a tablet.</p>
+										<h3>Affinity Diagramming</h3>
+										<p>Using Stormboard to create an affinity diagram from our observations.</p>
 										<ul class="actions">
 											<li><span class="button small">Enlarge</span></li>
 										</ul>
@@ -193,7 +181,7 @@
 							<ul>
 								<li>Many museums are inaccessible</li>
 								<li>Exhibitions are designed for sighted visitors</li>
-								<li>Lack of braille information/audio descriptions</li>
+								<li>There is a lack of braille information/audio descriptions at aquariums</li>
 								<li>Research on accessibility in aquariums is limited</li>
 							</ul>
 							<h2>Methods</h2>
