--- a/ice-burg.html
+++ b/ice-burg.html
@@ -112,72 +112,96 @@
 						<!-- Gallery -->
 							<div class="gallery style2 medium lightbox onscroll-fade-in">
 								<article>
-									<a href="images/gateway/gateway-heuristic-evaluation.png" data-caption="Conducted a heuristic evaluation on the existing gateway page." class="image">
-										<img src="images/gallery/thumbs/gateway-heuristic-thumb.jpg" alt="Heuristic evaluation" />
+									<a href="images/ice-burg/storyboard.jpg" data-caption="Created a storyboard during conceptualization of the piece." class="image">
+										<img src="images/gallery/thumbs/ice-burg-storyboard-tumb.jpg" alt="Image of a storyboard" />
 									</a>
 									<div class="caption">
-										<h3>Heuristic Evaluation</h3>
-										<p>Conducted a heuristic evaluation on the existing gateway page.</p>
+										<h3>Storyboard</h3>
+										<p>Created a storyboard during conceptualization of the piece.</p>
 										<ul class="actions">
 											<li><span class="button small">Enlarge</span></li>
 										</ul>
 									</div>
 								</article>
 								<article>
-									<a href="images/gateway/gateway-remote-user-testing.png" data-caption="Conducted remote user testing to find usability issues." class="image">
-										<img src="images/gallery/thumbs/gateway-remote-user-testing-thumb.jpg" alt="Remote user testing" />
+									<a href="images/ice-burg/affinity-diagramming.jpg" data-caption="Collaborated with our observations to find insights using an affinity diagram." class="image">
+										<img src="images/gallery/thumbs/ice-burg-affinity-diagram1-tumb.jpg" alt="Image of a group of people collaborating" />
 									</a>
 									<div class="caption">
-										<h3>Remote User Testing</h3>
-										<p>Conducted remote user testing to find usability issues.</p>
+										<h3>Affinity Diagramming</h3>
+										<p>Collaborated with our observations to find insights using an affinity diagram.</p>
 										<ul class="actions">
 											<li><span class="button small">Enlarge</span></li>
 										</ul>
 									</div>
 								</article>
 								<article>
-									<a href="images/gateway/gateway-mobile-breakpoint.png" data-caption="Screenshot of mobile breakpoint." class="image">
-										<img src="images/gallery/thumbs/gateway-mobile-thumb.jpg" alt="Test2" />
+									<a href="images/ice-burg/affinity-diagram.jpg" data-caption="A view up close of our affinity diagram." class="image">
+										<img src="images/gallery/thumbs/ice-burg-affinity-diagram2-tumb.jpg" alt="Image of an affinity diagram" />
 									</a>
 									<div class="caption">
-										<h3>Mobile Breakpoint</h3>
-										<p>Screenshot of mobile breakpoint.</p>
+										<h3>Affinity Diagram</h3>
+										<p>A view up close of our affinity diagram.</p>
 										<ul class="actions">
 											<li><span class="button small">Enlarge</span></li>
 										</ul>
 									</div>
 								</article>
 								<article>
-									<a href="images/gateway/gateway-desktop.png" data-caption="Screenshot of deskotp breakpoint." class="image">
-										<img src="images/gallery/thumbs/gateway-desktop-thumb.jpg" alt="Test2" />
+									<a href="images/ice-burg/full-scale-prototype.jpg" data-caption="Created a full size rudimentary prototype." class="image">
+										<img src="images/gallery/thumbs/ice-burg-prototype-tumb.jpg" alt="Image of full size rudimentary prototype" />
 									</a>
 									<div class="caption">
-										<h3>Desktop Breakpoint</h3>
-										<p>Screenshot of deskotp breakpoint.</p>
+										<h3>Prototyping</h3>
+										<p>Created a full size rudimentary prototype.</p>
 										<ul class="actions">
 											<li><span class="button small">Enlarge</span></li>
 										</ul>
 									</div>
 								</article>
 								<article>
-									<a href="images/gateway/gateway-mobile.jpg" data-caption="Peapod gateway page on a mobile device." class="image">
-										<img src="images/gallery/thumbs/gateway-mobile-device-thumb.jpg" alt="Test2" />
+									<a href="images/ice-burg/fabrication-2.jpg" data-caption="Created a 1/4 size prototype with actual materials" class="image">
+										<img src="images/gallery/thumbs/ice-burg-fabrication-tumb.jpg" alt="Image of me fabricating a 1/4 size prototype" />
 									</a>
 									<div class="caption">
-										<h3>Peapod Mobile</h3>
-										<p>Peapod gateway page on a mobile device.</p>
+										<h3>Fabrication</h3>
+										<p>Created a 1/4 size prototype with actual materials</p>
 										<ul class="actions">
 											<li><span class="button small">Enlarge</span></li>
 										</ul>
 									</div>
 								</article>
 								<article>
-									<a href="images/gateway/gateway-tablet.jpg" data-caption="Peapod gateway page on a tablet." class="image">
-										<img src="images/gallery/thumbs/gateway-tablet-thumb.jpg" alt="Test2" />
+									<a href="images/ice-burg/ice-burg-hardware.jpg" data-caption="Proximity sensors, Raspberry Pi 3, Arduinos, and LED light rings." class="image">
+										<img src="images/gallery/thumbs/ice-burg-hardware-tumb.jpg" alt="Image of proximity sensors, Raspberry Pi 3, Arduinos, and LED light rings." />
 									</a>
 									<div class="caption">
-										<h3>Peapod Tablet</h3>
-										<p>Peapod gateway page on a tablet.</p>
+										<h3>Ice-Burg Technology</h3>
+										<p>Proximity sensors, Raspberry Pi 3, Arduinos, and LED light rings.</p>
+										<ul class="actions">
+											<li><span class="button small">Enlarge</span></li>
+										</ul>
+									</div>
+								</article>
+								<article>
+									<a href="images/ice-burg/ice-burg-team.jpg" data-caption="The Ice-Burg team." class="image">
+										<img src="images/gallery/thumbs/ice-burg-team-tumb.jpg" alt="Image of the Ice-Burg team" />
+									</a>
+									<div class="caption">
+										<h3>Ice-Burg Team</h3>
+										<p>The Ice-Burg team.</p>
+										<ul class="actions">
+											<li><span class="button small">Enlarge</span></li>
+										</ul>
+									</div>
+								</article>
+								<article>
+									<a href="images/ice-burg/touching-ice-burg.jpg" data-caption="It works!" class="image">
+										<img src="images/gallery/thumbs/touching-ice-burg-thumb.jpg" alt="Image of girl touching illuminated sculpture" />
+									</a>
+									<div class="caption">
+										<h3>Ice-Burg Functional Prototype</h3>
+										<p>It works!</p>
 										<ul class="actions">
 											<li><span class="button small">Enlarge</span></li>
 										</ul>
