--- a/shedd-aquarium.html
+++ b/shedd-aquarium.html
@@ -160,12 +160,12 @@
 									</div>
 								</article>
 								<article>
-									<a href="images/shedd-aquarium/stormboard-affinity-diagram.jpg" data-caption="Using Stormboard to create an affinity diagram from our observations." class="image">
+									<a href="images/shedd-aquarium/stormboard-affinity-diagram.jpg" data-caption="Used Stormboard to create an affinity diagram from our observations." class="image">
 										<img src="images/gallery/thumbs/shedd-aquarium-stormboard-thumb.jpg" alt="Image of an affinity diagram on Stormboard" />
 									</a>
 									<div class="caption">
 										<h3>Affinity Diagramming</h3>
-										<p>Using Stormboard to create an affinity diagram from our observations.</p>
+										<p>Used Stormboard to create an affinity diagram from our observations.</p>
 										<ul class="actions">
 											<li><span class="button small">Enlarge</span></li>
 										</ul>
