--- a/help-section.html
+++ b/help-section.html
@@ -180,7 +180,7 @@
 							<h2>Design Problem</h2>
 							<ul>
 								<li>Existing help section lacked proper hierarchy of information</li>
-								<li>Exiting help section had redundant or out of date articles</li>
+								<li>Existing help section had redundant or out of date articles</li>
 								<li>Users were not able to search help articles</li>
 								<li>New help section must must support mobile, mini-tablet, tablet &amp; desktop</li>
 							</ul>
