--- a/ice-burg.html
+++ b/ice-burg.html
@@ -160,12 +160,12 @@
 									</div>
 								</article>
 								<article>
-									<a href="images/ice-burg/fabrication-2.jpg" data-caption="Created a 1/4 size prototype with actual materials" class="image">
+									<a href="images/ice-burg/fabrication-2.jpg" data-caption="Created a 1/4 scale prototype with actual materials" class="image">
 										<img src="images/gallery/thumbs/ice-burg-fabrication-tumb.jpg" alt="Image of me fabricating a 1/4 size prototype" />
 									</a>
 									<div class="caption">
 										<h3>Fabrication</h3>
-										<p>Created a 1/4 size prototype with actual materials</p>
+										<p>Created a 1/4 scale prototype with actual materials</p>
 										<ul class="actions">
 											<li><span class="button small">Enlarge</span></li>
 										</ul>
