--- a/about.html
+++ b/about.html
@@ -1,6 +1,15 @@
 <!DOCTYPE HTML>
 <html lang="en">
 	<head>
+	<!-- Global site tag (gtag.js) - Google Analytics -->
+		<script async src="https://www.googletagmanager.com/gtag/js?id=UA-129383153-1"></script>
+		<script>
+		  window.dataLayer = window.dataLayer || [];
+		  function gtag(){dataLayer.push(arguments);}
+		  gtag('js', new Date());
+
+		  gtag('config', 'UA-129383153-1');
+		</script>
 		<title>Tristan Bernardo | UI/UX Designer: About</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
