--- a/shedd-aquarium.html
+++ b/shedd-aquarium.html
@@ -188,7 +188,7 @@
 						<div class="inner medium">
 							<h2>Problem Space</h2>
 							<ul>
-								<li>Many museums are inaccessible</li>
+								<li>Many museums are inaccessible for people with disabilities</li>
 								<li>Exhibitions are designed for sighted visitors</li>
 								<li>There is a lack of braille information/audio descriptions at aquariums</li>
 								<li>Research on accessibility in aquariums is limited</li>
@@ -226,14 +226,14 @@
 								<li>Audio descriptions keep visitors engaged and are enjoyable</li>
 								<li>Current AD setup at Shedd Aquarium is effective</li>
 								<li>In exhibit design sounds create a sense of space</li>
-								<li>Information signage is not accessible</li>
+								<li>Information provided by signage is not accessible for people who are visually disabled</li>
 								<li>Tactile elements help learning and knowledge retention</li>
 							</ul>
 							<h2>Recommendations</h2>
 							<ul>
 								<li>Provide Assitive Technology (AT) training, and contact with people with disabilities for staff</li>
 								<li>Provide domain training for Audio Describers</li>
-								<li>Conducted advanced research on exhibits</li>
+								<li>Conduct advanced research on exhibits</li>
 								<li>Audio Describers should use a general to specific approach. Less is more</li>
 								<li>Design exhibits with multi-modal sensory information</li>
 								<li>Use braille for brief text information and AD for longer text information</li>
