--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
 					<section class="spotlight style1 orient-right content-align-left image-position-center onscroll-image-fade-in">
 						<div class="content">
 							<h2>Ice-Burg Project</h2>
-							<p>I was part of a team that won a grant to create an interactive art installation entitled "Ice-Burg", that responds to proximity and touch by engaging the user with music and lights. Ice-Burg explores the concept of placemaking in public spaces by encouraging interactions and connecting people who would otherwise not know each other.</p>
+							<p>I was part of a team that won a grant to created an interactive art installation entitled "Ice-Burg", that responds to proximity and touch by engaging the user with music and lights. Ice-Burg explores the concept of placemaking in public spaces by encouraging interactions and connecting people who would otherwise not know each other.</p>
 							<ul class="actions vertical">
 								<li><a href="ice-burg.html" class="button big wide">Details</a></li>
 							</ul>
