--- a/gateway.html
+++ b/gateway.html
@@ -205,6 +205,7 @@
 								<li>New gateway page must get visitors into the site with minimal resistance
 								<li>New gateway page must support mobile, mini-tablet, tablet &amp; desktop</li>
 								<li>New gateway page must support dynamic promotional content</li>
+								<li>Must comply with WCAG 2.0 AA standards</li>
 							</ul>
 							<h2>Methods</h2>
 							<div class="items style1 medium align-center onscroll-fade-in">
