--- a/help-section.html
+++ b/help-section.html
@@ -123,7 +123,7 @@
 							<div class="gallery style2 medium lightbox onscroll-fade-in">
 								<article>
 									<a href="images/help-section/help-section-notes.jpg" data-caption="Consolidated existing help section content." class="image">
-										<img src="images/gallery/thumbs/help-section-notes-thumb.jpg" alt="Heuristic evaluation" />
+										<img src="images/gallery/thumbs/help-section-notes-thumb.jpg" alt="Image of notes taken to consolidate help section content" />
 									</a>
 									<div class="caption">
 										<h3>Consolidate Content</h3>
@@ -135,7 +135,7 @@
 								</article>
 								<article>
 									<a href="images/help-section/help-section-card-sort.jpg" data-caption="Conducted remote open cardsort to determine information architecture." class="image">
-										<img src="images/gallery/thumbs/help-section-cardsort2-thumb.jpg" alt="Remote user testing" />
+										<img src="images/gallery/thumbs/help-section-cardsort2-thumb.jpg" alt="Image of results of open cardsorting using OptimalSort" />
 									</a>
 									<div class="caption">
 										<h3>Open Cardsort</h3>
@@ -147,7 +147,7 @@
 								</article>
 								<article>
 									<a href="images/help-section/help-section-card-sort-zoom.jpg" data-caption="Conducted remote open cardsort to determine information architecture." class="image">
-										<img src="images/gallery/thumbs/help-section-cardsort1-thumb.jpg" alt="Remote user testing" />
+										<img src="images/gallery/thumbs/help-section-cardsort1-thumb.jpg" alt="Close up image of results of open cardsorting using OptimalSort" />
 									</a>
 									<div class="caption">
 										<h3>Open Cardsort</h3>
@@ -158,12 +158,12 @@
 									</div>
 								</article>
 								<article>
-									<a href="images/help-section/help-section-sketch.jpg" data-caption="Sketch layout before designing high fidelity" class="image">
-										<img src="images/gallery/thumbs/help-section-sketch-thumb.jpg" alt="Test2" />
+									<a href="images/help-section/help-section-sketch.jpg" data-caption="Sketched layout before designing high fidelity" class="image">
+										<img src="images/gallery/thumbs/help-section-sketch-thumb.jpg" alt="Image of a rough sketch design of the help section" />
 									</a>
 									<div class="caption">
-										<h3>Sketched Layout</h3>
-										<p>Sketch layout before designing high fidelity</p>
+										<h3>Rough Sketch</h3>
+										<p>Sketched layout before designing high fidelity</p>
 										<ul class="actions">
 											<li><span class="button small">Enlarge</span></li>
 										</ul>
@@ -171,7 +171,7 @@
 								</article>
 								<article>
 									<a href="images/help-section/help-section-screencap.jpg" data-caption="Screenshot of Help section on desktop." class="image">
-										<img src="images/gallery/thumbs/help-section-screencap-thumb.jpg" alt="Test2" />
+										<img src="images/gallery/thumbs/help-section-screencap-thumb.jpg" alt="Screenshot of Peapod Help section on desktop" />
 									</a>
 									<div class="caption">
 										<h3>Desktop</h3>
