--- a/gateway.html
+++ b/gateway.html
@@ -123,7 +123,7 @@
 							<div class="gallery style2 medium lightbox onscroll-fade-in">
 								<article>
 									<a href="images/gateway/gateway-heuristic-evaluation.png" data-caption="Conducted a heuristic evaluation on the existing gateway page." class="image">
-										<img src="images/gallery/thumbs/gateway-heuristic-thumb.jpg" alt="Heuristic evaluation" />
+										<img src="images/gallery/thumbs/gateway-heuristic-thumb.jpg" alt="Image of my heuristic evaluation" />
 									</a>
 									<div class="caption">
 										<h3>Heuristic Evaluation</h3>
@@ -135,7 +135,7 @@
 								</article>
 								<article>
 									<a href="images/gateway/gateway-remote-user-testing.png" data-caption="Conducted remote user testing to find usability issues." class="image">
-										<img src="images/gallery/thumbs/gateway-remote-user-testing-thumb.jpg" alt="Remote user testing" />
+										<img src="images/gallery/thumbs/gateway-remote-user-testing-thumb.jpg" alt="Screenshot of a remote user testing session" />
 									</a>
 									<div class="caption">
 										<h3>Remote User Testing</h3>
