--- a/ice-burg.html
+++ b/ice-burg.html
@@ -296,7 +296,7 @@
 								<li><a href="http://www.linkedin.com/in/tkbdesign" target="_blank" class="icon style2 fa-linkedin"><span class="label">LinkedIn</span></a></li>
 								<li><a href="mailto:tkbernardo@gmail.com" class="icon style2 fa-envelope"><span class="label">Email</span></a></li>
 							</ul>
-							<p>Copyright &copy; 2019 Tristan Bernardo</p>
+							<p>Copyright &copy; Tristan Bernardo</p>
 						</div>
 					</footer>
 			</div>
