--- a/index.html
+++ b/index.html
@@ -200,7 +200,7 @@
 								<li><a href="https://www.linkedin.com/in/tkbernardo/" target="_blank" class="icon style2 fa-linkedin"><span class="label">LinkedIn</span></a></li>
 								<li><a href="mailto:tkbernardo@gmail.com" class="icon style2 fa-envelope"><span class="label">Email</span></a></li>
 							</ul>
-							<p>Copyright &copy; 2019 Tristan Bernardo</p>
+							<p>Copyright &copy; Tristan Bernardo</p>
 						</div>
 					</footer>
 
