Updated title to Product Designer

--- a/about.html
+++ b/about.html
@@ -10,7 +10,7 @@
 
 		  gtag('config', 'UA-129383153-1');
 		</script>
-		<title>Tristan Bernardo | UI/UX Designer: About</title>
+		<title>Tristan Bernardo | Product Designer: About</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<link rel="stylesheet" href="assets/css/main.css" />
