--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
 		  gtag('config', 'UA-129383153-1');
 		</script>
-		<title>Tristan Bernardo | UI/UX Designer</title>
+		<title>Tristan Bernardo | Product Designer</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -102,7 +102,7 @@
 								<h1>Tristan Bernardo</h1>
 								<p>UI/UX Designer</p>
 							</header>
-							<p class="major">I'm an experienced UI/UX Designer with a strong background in Web and Mobile Design.</p>
+							<p class="major">Experienced Product Designer who relies on research methodology and testable artifacts, to iterate and validate design solutions.</p>
 							<ul class="actions vertical">
 								<li><a href="about.html" class="button big wide">Read More</a></li>
 							</ul>
