--- a/gateway.html
+++ b/gateway.html
@@ -11,7 +11,7 @@
 
 		  gtag('config', 'UA-129383153-1');
 		</script>
-		<title>Tristan Bernardo | UI/UX Designer: Peapod Gateway Page</title>
+		<title>Tristan Bernardo | Product Designer: Peapod Gateway Page</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<link rel="stylesheet" href="assets/css/main.css" />
