Updated title to Product Designer

--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
 						<div class="content">
 							<header>
 								<h1>Tristan Bernardo</h1>
-								<p>UI/UX Designer</p>
+								<p>Product Designer</p>
 							</header>
 							<p class="major">Experienced Product Designer who relies on research methodology and testable artifacts, to iterate and validate design solutions.</p>
 							<ul class="actions vertical">
