Updated About information

--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
 								<h1>Tristan Bernardo</h1>
 								<p>Product Designer</p>
 							</header>
-							<p class="major">Experienced Product Designer who relies on research methodology and testable artifacts, to iterate and validate design solutions.</p>
+							<p class="major">Experienced Product Designer who relies on research methodology and testable artifacts, to iterate and validate design solutions. Strong background in Web/Mobile Design.</p>
 							<ul class="actions vertical">
 								<li><a href="about.html" class="button big wide">Read More</a></li>
 							</ul>
