--- a/help-section.html
+++ b/help-section.html
@@ -192,7 +192,7 @@
 								<li>Existing help section lacked proper hierarchy of information</li>
 								<li>Existing help section had redundant or out of date articles</li>
 								<li>Users were not able to search help articles</li>
-								<li>New help section must must support mobile, mini-tablet, tablet &amp; desktop</li>
+								<li>New help section must support mobile, mini-tablet, tablet &amp; desktop</li>
 								<li>Must comply with WCAG 2.0 AA standards</li>
 							</ul>
 							<h2>Methods</h2>
