Updated job title

--- a/about.html
+++ b/about.html
@@ -100,7 +100,7 @@
 						<div class="content align-left">
 							<header>
 								<h1>Tristan Bernardo</h1>
-								<p>UI/UX Designer</p>
+								<p>Product Designer</p>
 							</header>
 
 							<p class="major"><img class="image-bio left" src="images/about/tristan_bio.jpg" alt="Tristan Bernardo" />
