--- a/about.html
+++ b/about.html
@@ -209,7 +209,7 @@
 								<section>
 									<span class="icon style2 major fa-search"></span>
 									<h3>Contextual Inquiry</h3>
-									<p>Valuable tool for learning about users in their natural settings and gain new insights.</p>
+									<p>Valuable tool for learning about users in their natural settings to gain new insights.</p>
 								</section>
 								<section>
 									<span class="icon style2 major fa-group"></span>
