--- a/about.html
+++ b/about.html
@@ -34,6 +34,20 @@
 					<div class="gallery style2 medium">
 						<div class="nav-project-container">
 							<article>
+								<a href="order-management.html" class="image">
+									<img src="images/order-management-team-affinity-diagram-workshop-1440x900.jpg" alt="Image of General Manager persona" />
+								</a>
+								<div class="caption">
+									<p>Designed order management system for print production facility.</p>
+									<ul class="actions">
+										<li><span class="button small">Details</span></li>
+									</ul>
+								</div>
+							</article>
+							<a href="order-management.html"><p>Order Management System</p></a>
+						</div>
+						<div class="nav-project-container">
+							<article>
 								<a href="gateway.html" class="image">
 									<img src="images/gateway-mobile-1440x900.jpg" alt="Image of Peapod Gateway on a mobile device" />
 								</a>
@@ -49,7 +63,7 @@
 						<div class="nav-project-container">	
 							<article>
 								<a href="help-section.html" class="image">
-									<img src="images/help-section-desktop-1440x900.jpg" alt="Image of Peapod Help Secion on desktop" />
+									<img src="images/help-section-desktop-1440x900.jpg" alt="Image of Peapod Help secion on desktop" />
 								</a>
 								<div class="caption">
 									<p>Created new information architecture for Peapod Help section.</p>
@@ -80,7 +94,7 @@
 									<img src="images/tactile-otter-1440x900.jpg" alt="Image of participant who is visually impared touching a tactile exhibit at the Shedd Aquarium" />
 								</a>
 								<div class="caption">
-									<p>Helped provide recommendations to Shedd Aquarium for improving exhibit accessiblity.</p>
+									<p>Helped provide recommendations to Shedd Aquarium for improving exhibit accessibility.</p>
 									<ul class="actions">
 										<li><span class="button small">Details</span></li>
 									</ul>
