--- a/ice-burg.html
+++ b/ice-burg.html
@@ -35,6 +35,20 @@
 					<div class="gallery style2 medium">
 						<div class="nav-project-container">
 							<article>
+								<a href="order-management.html" class="image">
+									<img src="images/order-management-team-affinity-diagram-workshop-1440x900.jpg" alt="Image of General Manager persona" />
+								</a>
+								<div class="caption">
+									<p>Designed order management system for print production facility.</p>
+									<ul class="actions">
+										<li><span class="button small">Details</span></li>
+									</ul>
+								</div>
+							</article>
+							<a href="order-management.html"><p>Order Management System</p></a>
+						</div>
+						<div class="nav-project-container">
+							<article>
 								<a href="gateway.html" class="image">
 									<img src="images/gateway-mobile-1440x900.jpg" alt="Image of Peapod Gateway on a mobile device" />
 								</a>
@@ -50,7 +64,7 @@
 						<div class="nav-project-container">	
 							<article>
 								<a href="help-section.html" class="image">
-									<img src="images/help-section-desktop-1440x900.jpg" alt="Image of Peapod Help section on desktop" />
+									<img src="images/help-section-desktop-1440x900.jpg" alt="Image of Peapod Help secion on desktop" />
 								</a>
 								<div class="caption">
 									<p>Created new information architecture for Peapod Help section.</p>
