--- a/index.html
+++ b/index.html
@@ -126,8 +126,22 @@
 						</div>
 					</section>
 
-				<!-- Peapod Gateway -->
+				<!-- Order Management System -->
 					<section class="spotlight style1 orient-right content-align-left image-position-center onscroll-image-fade-in" id="first">
+						<div class="content">
+							<h2>Order Management System</h2>
+							<p>I was tasked with designing a system that would allow Stretto's print and mail facility to bring work in-house that would result $2 million in annual revenue.</p>
+							<ul class="actions vertical">
+								<li><a href="order-management.html" class="button big wide">Details</a></li>
+							</ul>
+						</div>
+						<div class="image">
+							<img src="images/order-management-team-affinity-diagram-workshop-1440x900.jpg" alt="Image of Peapod Gateway on a mobile device" />
+						</div>
+					</section>
+
+				<!-- Peapod Gateway -->
+					<section class="spotlight style1 orient-left content-align-left image-position-center onscroll-image-fade-in">
 						<div class="content">
 							<h2>Peapod Gateway Page</h2>
 							<p>As part of a complete overhaul of the Peapod website, I designed a new responsive Gateway page which resulted in reducing the bounce rate by 30%.</p>
@@ -141,7 +155,7 @@
 					</section>
 
 				<!-- Peapod Help Section -->
-					<section class="spotlight style1 orient-left content-align-left image-position-center onscroll-image-fade-in">
+					<section class="spotlight style1 orient-right content-align-left image-position-center onscroll-image-fade-in">
 						<div class="content">
 							<h2>Peapod Help Section</h2>
 							<p>With the redesign of the Peapod website, the existing Help section became outdated. This presented the opportunity for me to consolidate articles and construct a new, optimal information architecture.</p>
@@ -155,7 +169,7 @@
 					</section>
 
 				<!-- Ice-Burg -->
-					<section class="spotlight style1 orient-right content-align-left image-position-center onscroll-image-fade-in">
+					<section class="spotlight style1 orient-left content-align-left image-position-center onscroll-image-fade-in">
 						<div class="content">
 							<h2>Ice-Burg Project</h2>
 							<p>I was part of a team that won a grant to create an interactive art installation entitled "Ice-Burg", that responds to proximity and touch by engaging the user with music and lights. Ice-Burg explores the concept of placemaking in public spaces by encouraging interactions and connecting people who would otherwise not know each other.</p>
@@ -169,7 +183,7 @@
 					</section>
 
 				<!-- Shedd Aquarium -->
-					<section class="spotlight style1 orient-left content-align-left image-position-center onscroll-image-fade-in">
+					<section class="spotlight style1 orient-right content-align-left image-position-center onscroll-image-fade-in">
 						<div class="content">
 							<h2>Shedd Aquarium Accessibility</h2>
 							<p>Currently most museums do not design their exhibits to accommodate visitors with disabilities, particularly those with visual impairments. I was part of a team that investigated this problem space, and provided recommendations for improvement to the Shedd Aquarium in Chicago.</p>
