--- a/order-management.html
+++ b/order-management.html
@@ -240,7 +240,7 @@
 					<section class="wrapper style1 align-left">
 						<div class="inner medium">
 							<h2>Problem Space</h2>
-							<p>The type of business Stretto was attempting to capature is high volume, low margin. This meant that automation was needed in order to maintain a profit margin. In addtion, it was decided that the contract with the third party would not be renewed. This only left several months to define an MVP, design the system, and document the requirements for development.</p>
+							<p>The type of business Stretto was attempting to capture is high volume, low margin. This meant that automation was needed in order to maintain a profit margin. In addtion, it was decided that the contract with the third party would not be renewed. This only left several months to define an MVP, design the system, and document the requirements for development.</p>
 
 							<h3>Main constraints we had to consider:</h3>
 							<ul>
@@ -253,7 +253,7 @@
 							<h2>Process</h2>
 							
 							<h3>Plan</h3>
-							<p>Due to the tight timeline it was decided that we would leverage CINgroup's existing system because they already had an infrustructre for user profiles and permissions, account lookup, and payment processing. This allowed me to focus on the user flow, and not have to design a new interface.</p>
+							<p>Due to the tight timeline it was decided that we would leverage CINgroup's existing system because they already had an infrastructure for user profiles and permissions, account lookup, and payment processing. This allowed me to focus on the user flow, and not have to design a new interface.</p>
 							
 							<h3>Research</h3>
 							<p>I started out by creating a Research Protocol which commuincated to the Business the problem we're trying to solve for, the methods I would be conducting, how long the process will take, and the expected delierables. I conducted user interviews with the team, observed their work process, and analyzed their systems, tools and deliverables.</p>
