--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
 					<section class="spotlight style1 orient-right content-align-left image-position-center onscroll-image-fade-in" id="first">
 						<div class="content">
 							<h2>Order Management System</h2>
-							<p>I was tasked with designing a system that would allow Stretto's print and mail facility to bring work in-house that would result $2 million in annual revenue.</p>
+							<p>I was tasked with designing a system that would allow Stretto's print and mail facility to bring legal noticing business in-house that would result $2 million in annual revenue.</p>
 							<ul class="actions vertical">
 								<li><a href="order-management.html" class="button big wide">Details</a></li>
 							</ul>
