--- a/order-management.html
+++ b/order-management.html
@@ -253,10 +253,10 @@
 							<h2>Process</h2>
 							
 							<h3>Plan</h3>
-							<p>Due to the tight timeline it was decided that we would leverage CINgroup's existing system because they already had an infrastructure for user profiles and permissions, account lookup, and payment processing. This allowed me to focus on the user flow, and not have to design a new interface.</p>
+							<p>Due to the tight time-line it was decided that we would leverage CINgroup's existing system because they already had an infrastructure for user profiles and permissions, account lookup, and payment processing. This allowed me to focus on the user flow, and not have to design a new interface.</p>
 							
 							<h3>Research</h3>
-							<p>I started out by creating a Research Protocol which commuincated to the Business the problem we're trying to solve for, the methods I would be conducting, how long the process will take, and the expected delierables. I conducted user interviews with the team, observed their work process, and analyzed their systems, tools and deliverables.</p>
+							<p>I started out by creating a Research Protocol which communicated to the Business the problem we're trying to solve for, the methods I would be using, how long the process will take, and the expected deliverables. I conducted user interviews with the team, observed their work process, and analyzed their systems, tools and deliverables.</p>
 
 							<h3>Design</h3>
 							<p>From the data collected I was able to put together a complete picture of what they needed to carry out their work, and translate that into functional prototype. This prototype was useful for collecting feedback from the stakeholder as well as the development team.</p>
@@ -269,7 +269,7 @@
 								<section>
 									<span class="icon style2 major fa-comments-o"></span>
 									<h3>Interviews</h3>
-									<p>I interviewed five team members accross two facilities to understand their needs, goals and pain points.</p>
+									<p>I interviewed five team members across two facilities to understand their needs, goals and pain points.</p>
 								</section>
 								<section>
 									<span class="icon style2 major fa-search"></span>
@@ -308,7 +308,7 @@
 							<ul>
 								<li>New order management system allowed the company to bring $2 million of annual revenue in-house.</li>
 								<li>System was built for future integrations with other business lines to further capitalize on their investment.</li>
-								<li>The main stakeholder was so impressed with the process he be came an advocate for me implementing it throught the business.</li>
+								<li>The main stakeholder was so impressed with the process he be came an advocate for me implementing it throughout other areas of the business.</li>
 								<li>Team members were impressed with the process because they felt taken care of since I was taking their needs into account.</li>
 							</ul>
 							<blockquote>
