--- a/order-management.html
+++ b/order-management.html
@@ -253,7 +253,7 @@
 							<h2>Process</h2>
 							
 							<h3>Plan</h3>
-							<p>Due to the tight time-line it was decided that we would leverage CINgroup's existing system because they already had an infrastructure for user profiles and permissions, account lookup, and payment processing. This allowed me to focus on the user flow, and not have to design a new interface.</p>
+							<p>Due to the tight time-line it was decided that we would leverage CINgroup's existing system because they already had an infrastructure for user profiles and permissions, account lookup, and payment processing. This allowed me to focus on the user flow, and not have to design a brand new interface.</p>
 							
 							<h3>Research</h3>
 							<p>I started out by creating a Research Protocol which communicated to the Business the problem we're trying to solve for, the methods I would be using, how long the process will take, and the expected deliverables. I conducted user interviews with the team, observed their work process, and analyzed their systems, tools and deliverables.</p>
