--- a/order-management.html
+++ b/order-management.html
@@ -138,8 +138,8 @@
 						<!-- Gallery -->
 							<div class="gallery style2 medium lightbox onscroll-fade-in">
 								<article>
-									<a href="images/order-management/order-management-contextual-inquiry1.jpg" data-caption="Conducted a contextual inquiry and observation of print production facility operations." class="image">
-										<img src="images/gallery/thumbs/order-management-contextual-inquiry1-thumb.jpg" alt="Image of Production Team member removing letters from the envelope stuffer." />
+									<a href="images/order-management/order-management-contextual-inquiry2.jpg" data-caption="Conducted a contextual inquiry and observation of print production facility operations." class="image">
+										<img src="images/gallery/thumbs/order-management-contextual-inquiry2-thumb.jpg" alt="Image of Production Team member retreiving a print job from the printer." />
 									</a>
 									<div class="caption">
 										<h3>Contextual Inquiry</h3>
@@ -150,8 +150,8 @@
 									</div>
 								</article>
 								<article>
-									<a href="images/order-management/order-management-contextual-inquiry2.jpg" data-caption="Conducted a contextual inquiry and observation of print production facility operations." class="image">
-										<img src="images/gallery/thumbs/order-management-contextual-inquiry2-thumb.jpg" alt="Image of Production Team member retreiving a print job from the printer." />
+									<a href="images/order-management/order-management-contextual-inquiry1.jpg" data-caption="Conducted a contextual inquiry and observation of print production facility operations." class="image">
+										<img src="images/gallery/thumbs/order-management-contextual-inquiry1-thumb.jpg" alt="Image of Production Team member removing letters from the envelope stuffer." />
 									</a>
 									<div class="caption">
 										<h3>Contextual Inquiry</h3>
@@ -259,7 +259,7 @@
 							<p>I started out by creating a Research Protocol which communicated to the Business the problem we're trying to solve for, the methods I would be using, how long the process will take, and the expected deliverables. I conducted user interviews with the team, observed their work process, and analyzed their systems, tools and deliverables.</p>
 
 							<h3>Design</h3>
-							<p>From the data collected I was able to put together a complete picture of what they needed to carry out their work, and translate that into functional prototype. This prototype was useful for collecting feedback from the stakeholder as well as the development team.</p>
+							<p>From the data collected I was able to put together a complete picture of what the Production Team needed to carry out their work, and translate that into functional prototype. This prototype was useful for collecting feedback from the stakeholder as well as the development team.</p>
 
 							<h3>Testing</h3>
 							<p>Before the release of the system to End Users I conducted Usability Study with five Production Team members. From this study I documented and prioritized bugs and usability issues to be fixed.</p>
