--- a/about.html
+++ b/about.html
@@ -117,10 +117,16 @@
 								<p>Product Designer</p>
 							</header>
 
-							<p class="major"><img class="image-bio left" src="images/about/tristan_bio.jpg" alt="Tristan Bernardo" />
-								I recently relocated to southern California from Chicago, where I worked as a <strong>UI/UX Designer</strong> for <a href="http://www.swiftiq.com" target="_blank">SwiftIQ</a>, and <a href="http://www.peapod.com" target="_blank">Peapod</a> before that. I received my <a href="https://www.cdm.depaul.edu/academics/Pages/MSinHuman-ComputerInteraction.aspx" target="_blank">MS in Human-Computer Interaction</a> from <a href="https://www.depaul.edu/Pages/default.aspx" target="_blank">DePaul University</a>.
+							<p><img class="image-bio left" src="images/about/tristan_bio.jpg" alt="Tristan Bernardo" />
+								My career as a Designer spans the gamut from Graphic Designer to Web Designer. From Visual Designer to UI/UX Designer, and now Product Designer. I've worked for corporations and startups, and I've tried my hand at entrepreneurship.
 							</p>
-							<p class="major">
+							<p>
+								I was exposed to the world of Experience Design by my colleague at Peapod, who mentioned he was in the HCI graduate program at DePaul. I knew then I wanted to pursue the same career path, and so I received my <a href="https://www.cdm.depaul.edu/academics/Pages/MSinHuman-ComputerInteraction.aspx" target="_blank">MS in Human-Computer Interaction</a> from <a href="https://www.depaul.edu/Pages/default.aspx" target="_blank">DePaul University</a> in 2017.
+							</p>
+							<p>
+								I recently relocated to southern California from Chicago to be with my now wife. We enjoy our life together along with our daughter and our adorable pup Lucy.
+							</p>
+							<p>
 								I believe in trying to get an understanding of a problem space, before jumping into a solution. I’m driven by working with smart energetic people. I enjoy collaborating with others, and I often like to observe how others attack a problem.
 							</p>
 								<ul>
@@ -143,6 +149,17 @@
 
 						<!-- Gallery -->
 							<div class="gallery style2 medium lightbox onscroll-fade-in">
+								<article>
+									<a href="order-management.html" class="image">
+										<img src="images/gallery/thumbs/order-management-team-affinity-diagram-workshop-thumb.jpg" alt="Image of General Manager persona" />
+									</a>
+									<div class="caption">
+										<p>Designed order management system for print production facility.</p>
+										<ul class="actions">
+											<li><span class="button small">Details</span></li>
+										</ul>
+									</div>
+								</article>
 								<article>
 									<a href="gateway.html" class="image">
 										<img src="images/gallery/thumbs/gateway-mobile-device-thumb.jpg" alt="Image of Peapod Gateway on a mobile device" />
