--- a/order-management.html
+++ b/order-management.html
@@ -253,13 +253,13 @@
 							<h2>Process</h2>
 							
 							<h3>Plan</h3>
-							<p>Due to the tight time-line it was decided that we would leverage CINgroup's existing system because they already had an infrastructure for user profiles and permissions, account lookup, and payment processing. This allowed me to focus on the user flow, and not have to design a brand new interface.</p>
+							<p>Due to the tight time-line it was decided that we would leverage CINgroup's existing system because they already had an infrastructure for user profiles and permissions, account lookup, and payment processing. This allowed me to focus on the user flows and interactions, and not have to worry about a brand new design system.</p>
 							
 							<h3>Research</h3>
 							<p>I started out by creating a Research Protocol which communicated to the Business the problem we're trying to solve for, the methods I would be using, how long the process will take, and the expected deliverables. I conducted user interviews with the team, observed their work process, and analyzed their systems, tools and deliverables.</p>
 
 							<h3>Design</h3>
-							<p>From the data collected I was able to put together a complete picture of what the Production Team needed to carry out their work, and translate that into functional prototype. This prototype was useful for collecting feedback from the stakeholder as well as the development team.</p>
+							<p>From the data collected I was able to put together a complete picture of what the Production Team needed to carry out their work, and translate that into a functional prototype. This prototype was useful for collecting feedback from the key stakeholder and the Development Team.</p>
 
 							<h3>Testing</h3>
 							<p>Before the release of the system to End Users I conducted Usability Study with five Production Team members. From this study I documented and prioritized bugs and usability issues to be fixed.</p>
