--- a/about.html
+++ b/about.html
@@ -121,7 +121,7 @@
 								My career as a Designer spans the gamut from Graphic Designer to Web Designer. From Visual Designer to UI/UX Designer, and now Product Designer. I've worked for corporations and startups, and I've tried my hand at entrepreneurship.
 							</p>
 							<p>
-								I was exposed to the world of Experience Design by my colleague at Peapod, who mentioned he was in the HCI graduate program at DePaul. I knew then I wanted to pursue the same career path, and so I received my <a href="https://www.cdm.depaul.edu/academics/Pages/MSinHuman-ComputerInteraction.aspx" target="_blank">MS in Human-Computer Interaction</a> from <a href="https://www.depaul.edu/Pages/default.aspx" target="_blank">DePaul University</a> in 2017.
+								I was exposed to the world of Experience Design by my colleague at Peapod, who mentioned he was in the HCI graduate program at DePaul. I knew then I wanted to pursue the same career path, and so I enrolled in the program. I received my <a href="https://www.cdm.depaul.edu/academics/Pages/MSinHuman-ComputerInteraction.aspx" target="_blank">MS in Human-Computer Interaction</a> from <a href="https://www.depaul.edu/Pages/default.aspx" target="_blank">DePaul University</a> in 2017.
 							</p>
 							<p>
 								I recently relocated to southern California from Chicago to be with my now wife. We enjoy our life together along with our daughter and our adorable pup Lucy.
