--- a/about.html
+++ b/about.html
@@ -124,7 +124,7 @@
 								I was exposed to the world of Experience Design by my colleague at Peapod, who mentioned he was in the HCI graduate program at DePaul. I knew then I wanted to pursue the same career path, and so I enrolled in the program. I received my <a href="https://www.cdm.depaul.edu/academics/Pages/MSinHuman-ComputerInteraction.aspx" target="_blank">MS in Human-Computer Interaction</a> from <a href="https://www.depaul.edu/Pages/default.aspx" target="_blank">DePaul University</a> in 2017.
 							</p>
 							<p>
-								I recently relocated to southern California from Chicago to be with my now wife. We enjoy our life together along with our daughter and our adorable pup Lucy.
+								I recently relocated to southern California from Chicago to be with my now wife. We enjoy life together along with our daughter and our adorable pup Lucy.
 							</p>
 							<p>
 								I believe in trying to get an understanding of a problem space, before jumping into a solution. I’m driven by working with smart energetic people. I enjoy collaborating with others, and I often like to observe how others attack a problem.
