--- a/about.html
+++ b/about.html
@@ -118,7 +118,7 @@
 							</header>
 
 							<p><img class="image-bio left" src="images/about/tristan_bio.jpg" alt="Tristan Bernardo" />
-								My career as a Designer spans the gamut from Graphic Designer to Web Designer. From Visual Designer to UI/UX Designer, and now Product Designer. I've worked for corporations and startups, and I've tried my hand at entrepreneurship.
+								My career as a Designer spans the gamut from Graphic Designer to Web Designer. From Visual Designer to UI/UX Designer, and now Product Designer. I've worked for corporations and startups, in Agile shops and Waterfall shops. I've also tried my hand at entrepreneurship.
 							</p>
 							<p>
 								I was exposed to the world of Experience Design by my colleague at Peapod, who mentioned he was in the HCI graduate program at DePaul. I knew then I wanted to pursue the same career path, and so I enrolled in the program. I received my <a href="https://www.cdm.depaul.edu/academics/Pages/MSinHuman-ComputerInteraction.aspx" target="_blank">MS in Human-Computer Interaction</a> from <a href="https://www.depaul.edu/Pages/default.aspx" target="_blank">DePaul University</a> in 2017.
