--- a/about.html
+++ b/about.html
@@ -130,7 +130,7 @@
 								I recently relocated to southern California from Chicago to be with my now wife. We enjoy life together along with our daughter and our adorable pup Lucy.
 							</p>
 								<ul>
-									<li><strong>Interests:</strong> User-centered Design, Embodied Interaction, Cognitive Psychology
+									<li><strong>Interests:</strong> User-centered Design, Embodied Interaction, Cognitive Psychology, Art, Sculpture, DIY Home Improvement Projects
 									<li><strong>Influences:</strong> Don Norman, <i>Design of Everyday Things</i></li>
 									<li><strong>Background:</strong> Visual Design, Web/Print Design, Mobile Design</li>
 								</ul>
