--- a/about.html
+++ b/about.html
@@ -215,7 +215,7 @@
 					<section class="wrapper style1 align-center">
 						<div class="inner">
 							<h2>Methodology</h2>
-							<p>As a Human-Computer Interaction (HCI) practitioner I rely upon a system of methods for investigating new problem spaces, validating design decisions, and testing for usability issues. These methods include:</p>
+							<p>As a Human-Computer Interaction (HCI) practitioner I rely upon a collection of methods and a systematic approach for investigating new problem spaces, validating design decisions, and testing for usability issues. These methods include:</p>
 							<div class="items style1 medium onscroll-fade-in">
 								<section>
 									<span class="icon style2 major fa-object-ungroup"></span>
