--- a/about.html
+++ b/about.html
@@ -117,7 +117,7 @@
 								<p>Product Designer</p>
 							</header>
 
-							<p><img class="image-bio left" src="images/about/tristan_bio.jpg" alt="Tristan Bernardo" />
+							<p><img class="image-bio left" src="images/about/tristan_bio2.jpg" alt="Tristan Bernardo" />
 								My career as a Designer spans the gamut from Graphic Designer to Web Designer. From Visual Designer to UI/UX Designer, and now Product Designer. I've worked for corporations and startups, in Agile shops and Waterfall shops. I've also tried my hand at entrepreneurship.
 							</p>
 							<p>
@@ -127,10 +127,10 @@
 								My design philosophy is I believe in trying to get an understanding of a problem space, before jumping into a solution. I’m driven by working with smart energetic people. I enjoy collaborating with others, and I often like to observe how others attack a problem.
 							</p>
 							<p>
-								I recently relocated to southern California from Chicago to be with my now wife. We enjoy life together along with our daughter and our adorable pup Lucy.
+								I recently relocated to southern California from Chicago to be with my now wife. We enjoy life together with our daughter, and our adorable pup Lucy.
 							</p>
 								<ul>
-									<li><strong>Interests:</strong> User-centered Design, Embodied Interaction, Cognitive Psychology, Art, Sculpture, DIY Home Improvement Projects
+									<li><strong>Interests:</strong> User-centered Design, Embodied Interaction, Cognitive Psychology, Art, Sculpture, Photography, DIY Home Improvement Projects
 									<li><strong>Influences:</strong> Don Norman, <i>Design of Everyday Things</i></li>
 									<li><strong>Background:</strong> Visual Design, Web/Print Design, Mobile Design</li>
 								</ul>
